# uav_vision

ooSockets/: CMakeLists.txt
ooSockets/examples/Tcp Client/: SThread.cpp  SThread.h  main.cpp
ooSockets/examples/Tcp Server/: SThread.cpp  SThread.h  main.cpp
ooSockets/src/: CMakeLists.txt  Doxyfile  OAddressInfo.cpp  OAddressInfo.hpp  OByteArray.cpp  OByteArray.hpp  OCompatibility.cpp  OCompatibility.hpp  ODSMux.cpp  ODSMux.h  ODataStream.cpp  ODataStream.hpp  OFormLetter.cpp  OFormLetter.hpp  OIODevice.hpp  OList.hpp  OMacAddress.cpp  OMacAddress.hpp  ONet.cpp  ONet.hpp  OO.cpp  OO.hpp  OPipe.cpp  OPipe.hpp  OPipeError.cpp  OPipeError.hpp  OProperties.cpp  OProperties.hpp  OSerial.cpp  OSerial.hpp  OSerialError.cpp  OSerialError.hpp  OSockAddress.cpp  OSockAddress.hpp  OSockError.cpp  OSockError.hpp  OSocket.cpp  OSocket.hpp  OString.cpp  OString.hpp  (+21 more)
vision/CVOperator/: CVOperator.cpp  CVOperator.h  CVOperator.pro  CVOperator.ui  LogWidget.cpp  LogWidget.h  SqlTableModel.hpp  main.cpp
vision/cam_controller/: cam_controller.pde
vision/common/: Defs.h  ImageDatabase.cpp  ImageDatabase.h
vision/plane/: MainThread.cpp  MainThread.h  Makefile  VideoThread.cpp  VideoThread.h  main.cpp  plane.pro
vision/plane-build-desktop/: Makefile
